--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-query": "^3.24.4",
+    "react-test-renderer": "^17.0.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -56,6 +57,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@types/react-datepicker": "^4.1.7",
+    "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
     "eslint": "^7.32.0",
