--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-testing-library": "^4.12.4",
     "framer-motion": "^4",
+    "immer": "^9.0.6",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-datepicker": "^4.2.1",
