--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^4",
     "immer": "^9.0.6",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
